Page Object Model

--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -1,4 +1,8 @@
 baseUrl=https://nisum.com
-DbURL= jdbc:mysql://db4free.net:3306
-DbUsername=akashdktyagi
-DbPassword=akashdktyagi
+userName=akashdktyagi
+pass=akashdktyagi
+jdbcDriver=com.mysql.cj.jdbc.Driver
+dbUrl= jdbc:mysql://db4free.net:3306
+browser= FF
+page_load_timeout=10
+implicit_wait=10
