--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.7.0</version>
+        </dependency>
 
 
     </dependencies>
