--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -3,6 +3,7 @@ userName=akashdktyagi
 pass=akashdktyagi
 jdbcDriver=com.mysql.cj.jdbc.Driver
 dbUrl= jdbc:mysql://db4free.net:3306
-browser= FF
+browser= chrome
+amazonUrl=https://www.amazon.com
 page_load_timeout=10
 implicit_wait=10
