New Fuctionalities frames etc

--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -5,5 +5,7 @@ jdbcDriver=com.mysql.cj.jdbc.Driver
 dbUrl= jdbc:mysql://db4free.net:3306
 browser= chrome
 amazonUrl=https://www.amazon.com
+doubleClickUrl=https://accounts.google.com/signup
+frameUrl=https://jqueryui.com/droppable/
 page_load_timeout=10
 implicit_wait=10
