DB connection pointed

--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -2,7 +2,7 @@ baseUrl=https://nisum.com
 userName=akashdktyagi
 pass=akashdktyagi
 jdbcDriver=com.mysql.cj.jdbc.Driver
-dbUrl= jdbc:mysql://db4free.net:3306
+dbUrl= jdbc:mysql://db4free.net:3306/db_autofrat
 browser= chrome
 amazonUrl=https://www.amazon.com
 doubleClickUrl=https://accounts.google.com/signup
